[package]
name = "seedtool-cli"
version = "0.1.7"
edition = "2021"
description = "A command-line tool for generating and transforming cryptographic seeds."
authors = ["Blockchain Commons"]
keywords = ["crypto", "random", "seed", "mnemonic", "bitcoin"]
repository = "https://github.com/BlockchainCommons/seedtool-cli-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
categories = ["cryptography::cryptocurrencies", "command-line-utilities"]
documentation = "https://docs.rs/seedtool-cli"

[[bin]]
name = "seedtool"
path = "src/main.rs"

[dependencies]
dcbor = "^0.15.0"
bc-ur = "^0.5.0"
bc-envelope = "^0.18.1"
bc-components = "^0.12.0"
bc-rand = "^0.2.0"
bc-crypto = "^0.4.0"
sskr = "^0.4.0"

clap = { version = "^4.4.3", features = ["derive", "unstable-styles"] }
anyhow = "^1.0.0"
anstyle = "^1.0.1"
hex = "^0.4.3"
regex = "^1.9.5"
clap-num = "1.1.1"
bip39 = "2.0.0"

[dev-dependencies]
indoc = "^2.0.0"
assert_cmd = "^2.0.12"
hex-literal = "^0.4.1"
