[package]
name = "seedtool-cli"
version = "0.1.10"
edition = "2021"
description = "A command-line tool for generating and transforming cryptographic seeds."
authors = ["Blockchain Commons"]
repository = "https://github.com/BlockchainCommons/seedtool-cli-rust"
readme = "README.md"
license = "BSD-2-Clause-Patent"
documentation = "https://docs.rs/seedtool-cli"
keywords = ["crypto", "random", "seed", "mnemonic", "bitcoin"] # Up to five
categories = ["cryptography::cryptocurrencies", "command-line-utilities"] # https://crates.io/category_slugs

[[bin]]
name = "seedtool"
path = "src/main.rs"

[dependencies]
dcbor = "^0.16.0"
bc-ur = "^0.6.0"
bc-envelope = "^0.21.0"
bc-components = "^0.15.0"
bc-rand = "^0.2.0"
bc-crypto = "^0.5.0"
sskr = "^0.4.0"

clap = { version = "^4.4.3", features = ["derive", "unstable-styles"] }
anyhow = "^1.0.0"
anstyle = "^1.0.1"
hex = "^0.4.3"
regex = "^1.9.5"
clap-num = "1.1.1"
bip39 = "2.0.0"

[dev-dependencies]
indoc = "^2.0.0"
assert_cmd = "^2.0.12"
hex-literal = "^0.4.1"
